<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur"
    tools:context="com.example.fitfusion.SecondActivity"
    tools:layout_editor_absoluteY="25dp">

    <!-- Button that will redirect to stopwatch activity. -->
    <Button
        android:id="@+id/btnStopwatch"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stopwatch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <!-- Button that will redirect to timer activity. -->
    <Button
        android:id="@+id/btnTimer"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/timer1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <!-- Button that will redirect to nutrition activity. -->
    <Button
        android:id="@+id/btnNutrition"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nutrition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <!-- Button that will redirect to workout activity. -->
    <Button
        android:id="@+id/btnWorkout"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/workout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <!-- Button that will redirect to notes activity. -->
    <Button
        android:id="@+id/btnNotes"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <!-- Button that will bring user to login page. -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout"
        android:focusable="true"
        android:contentDescription="TODO" />

    <!-- Bottom bar that will allow user to go to developers and about of the app. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="#995FA3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStopwatch"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="133dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/developerImageViewId"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:src="@drawable/developer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Developer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="112dp"
                android:layout_height="28dp"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Home"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="131dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/aboutImageViewId"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:src="@drawable/about2" />

            <TextView
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="About"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>